# fer-playground

./: .gitignore  .vercelignore  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.js
api/: main.py  requirements.txt
experiments/: fer-2013.ipynb  fer_benchmark.py  kaggle_benchmark.py  utils.py
model/: export_model.py  model.py
script/backend/: main.py  service.py
script/frontend/: package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts
src/: App.tsx  styles.css
